apps/monitoring/httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
  hostnames:
    - "grafana.talos.froystein.jp"
  rules:
    - backendRefs:
        - name: kube-prom-stack-grafana
          port: 80
